Update notes and writes pages

--- a/src/pages/notes.astro
+++ b/src/pages/notes.astro
@@ -12,9 +12,7 @@ const allPosts = await getCollection("notes");
     <h1 class="text-4xl font-bold mb-4">ᜆᜎᜀᜈ᜔</h1>
    
     <div class="p-4">
-        <p class="italic text-neutral-600">
-            Below is a collection of notes I've made over the years. If you happen to be here, I hope you find them useful. :)</p>
-        </p>
+        <p class="italic text-neutral-600">Below is a collection of notes I've made over the years. If you happen to be here, I hope you find them useful. :)</p>
         {/*<p>Notes Count: {allPosts.length}</p> */}
     </div>
     <Navigations url={"/"}/>
