--- a/src/pages/writes.astro
+++ b/src/pages/writes.astro
@@ -12,9 +12,7 @@ const allPosts = await getCollection("writes");
     <h1 class="text-4xl font-bold mb-4">ᜐᜓᜎᜆᜒᜈ᜔</h1>
    
     <div class="p-4">
-        <p class="italic text-neutral-600">
-            Here are my writings I never thought I would write. :) 
-        </p> 
+        <p class="italic text-neutral-600">Here are my writings I never thought I would write. :)</p> 
         {/*<p>Writes count: {allPosts.length}</p>*/}
     </div>
     
