--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -21,6 +21,6 @@ import { MonitorIcon, SmartphoneIcon, ChromeIcon } from 'astro-feather';
         Icon={MonitorIcon} 
         url="example.com"
         title="Desktop App" 
-        description="i dont plan to build one... XD"
-    />
+        description="I dont plan to build one..."
+        emoji="🤣"
 </section>
