--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -22,5 +22,5 @@ import { MonitorIcon, SmartphoneIcon, ChromeIcon } from 'astro-feather';
         url="example.com"
         title="Desktop App" 
         description="I dont plan to build one..."
-        emoji="🤣"
+        emoji="😂"
 </section>
