--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -10,7 +10,7 @@ const { pageTitle } = Astro.props;
     <meta name="description" content="Memento mori.">
     <title>{pageTitle}</title>
   </head> 
-  <body class="max-w-3xl mx-auto p-4 bg-neutral-950 color text-slate-100 font-noto">
+  <body class="max-w-3xl mx-auto p-4 bg-neutral-950 color text-slate-100">
     <slot />
   </body>
 </html>
