--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,2 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Tagalog&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Emoji&display=swap');    
+@import url('https://fonts.googleapis.com/css2?family=Noto+Emoji&family=Noto+Sans+Tagalog&display=swap');
