--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Emoji&family=Noto+Sans+Tagalog&display=swap');
+
+@tailwind base; 
+@tailwind components; 
+@tailwind utilities;
