--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Emoji&family=Noto+Sans+Tagalog&display=swap');
 
-@tailwind base; 
+@tailwind base;
 @tailwind components; 
 @tailwind utilities;
+
+@layer base {
+    html {
+        @apply font-sans;
+    }
+} 
+  
