Remove unnecessary CSS class

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -14,7 +14,7 @@ const { pageTitle } = Astro.props;
     <meta name="description" content="Memento mori.">
     <title>{pageTitle}</title>
   </head> 
-  <body class="max-w-3xl mx-auto p-4 bg-neutral-950 color text-slate-100 font-sans">
+  <body class="max-w-3xl mx-auto p-4 bg-neutral-950 color text-slate-100">
     <slot />
     <Projects />
     <Writings />
