--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import Projects from '../components/Projects.astro'
 import Writings from '../components/Writings.astro'
 import Socials from '../components/Socials.astro'
+import '../styles/global.css';
 
 const { pageTitle } = Astro.props;  
 ---
@@ -12,7 +13,6 @@ const { pageTitle } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content="Memento mori.">
-    <link rel="stylesheet" href="/styles/global.css" />
     <title>{pageTitle}</title>
   </head> 
   <body class="max-w-3xl mx-auto p-4 bg-neutral-950 color text-slate-100">
