Remove global CSS import and update index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,6 @@ const information = {
 	<div class="p-4">
 		<p class="mb-4">Hey there! I'm <span class="font-bold">{information.name}</span>.</p>
 		<p class="mb-4">I am passionate about <b>{information.hobbies[0]}</b>, <b>{information.hobbies[1]}</b>, and <b>{information.hobbies[2]}</b>. I’m currently on a mission to become a Software Developer 🧑‍💻, turning my passion for technology into a dream career. I’m in the process of completing my Bachelor of Science in Information Technology degree.</p>
-		<p>I am currently adopting a design approach focused on simplicity and clarity. My guiding philosophy is based on the belief that '<span class="font-bold italic">less is more</span>'.</p>
+		<p>Currently adopting a design approach focused on simplicity and clarity. My guiding philosophy is based on the belief that '<span class="font-bold italic">less is more</span>'.</p>
 	</div>
 </BaseLayout>
