--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,7 +5,7 @@ import Socials from '../components/Socials.astro'
 
 const { pageTitle } = Astro.props;  
 ---
-<html lang="en">
+<html lang="en" class="font-sans">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
