--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,7 +5,7 @@ import Socials from '../components/Socials.astro'
 
 const { pageTitle } = Astro.props;  
 ---
-<html lang="en" class="font-sans">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -14,7 +14,7 @@ const { pageTitle } = Astro.props;
     <meta name="description" content="Memento mori.">
     <title>{pageTitle}</title>
   </head> 
-  <body class="max-w-3xl mx-auto p-4 bg-neutral-950 color text-slate-100">
+  <body class="max-w-3xl mx-auto p-4 bg-neutral-950 color text-slate-100 font-sans">
     <slot />
     <Projects />
     <Writings />
