Add font preconnect and stylesheet

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,9 @@ const information = {
   hobbies: ["technology", "coding", "mechanical keyboards"],
 };
 ---
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Emoji&family=Noto+Sans+Tagalog&display=swap" rel="stylesheet">
 
 <BaseLayout pageTitle={pageTitle}>
 	<h1 class="text-4xl font-bold mb-4">ᜇᜒᜌᜒᜋ᜔</h1>
