--- a/src/components/Navigations.astro
+++ b/src/components/Navigations.astro
@@ -3,9 +3,7 @@ import { ArrowLeftIcon } from 'astro-feather';
 
 const { url } = Astro.props
 ---
-<nav class="flex justify-between mt-2">
-    <h1>What's in here?</h1>
-
+<nav class="flex justify-end mt-2">
     <a href={url} class="flex items-center underline border border-transparent hover:border-slate-100">
         <ArrowLeftIcon size={24} />
         <span class="ml-1">Back</span>
