--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -1,7 +1,7 @@
 ---
 const { url, title, description, pubDate } = Astro.props 
 ---
-<li class="py-2">
+<li class="my-2">
     <div class="flex justify-between">
         <a class="underline border border-transparent hover:border-slate-100" href={url}>{title} </a>
         <p class="text-neutral-400">&bull; {pubDate}</p>
