--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -4,7 +4,7 @@ const { url, title, description, pubDate } = Astro.props
 <li class="my-2">
     <div class="flex justify-between">
         <a class="underline border border-transparent hover:border-slate-100" href={url}>{title} </a>
-        <p class="text-neutral-400">&bull; {pubDate}</p>
+        <p class="text-neutral-400">{pubDate}</p>
 
     </div>
     <p class="text-neutral-400"> {description}</p>
