Add minutesRead to Posts component and sort posts by pubDate

--- a/src/pages/writes.astro
+++ b/src/pages/writes.astro
@@ -7,7 +7,22 @@ import PostLayout from "../layouts/PostLayout.astro";
 const pageTitle = "My Astro Learning Blog";
 const allPosts = await getCollection("writes");
 
+const posts = await Promise.all(
+    allPosts
+    .sort(((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()))
+    .map(async (post) => {
+        const { remarkPluginFrontmatter  } = await post.render();
+        return {
+            ...post,
+            data: {
+                ...post.data,
+                minutesRead: remarkPluginFrontmatter.minutesRead as string,
+            },
+      };
+    }),
+)
 ---
+
 <PostLayout pageTitle={pageTitle}>
     <h1 class="text-4xl font-bold mb-4">ᜐᜓᜎᜆᜒᜈ᜔</h1>
    
@@ -19,8 +34,8 @@ const allPosts = await getCollection("writes");
     <Navigations url={"/"}/>
     <ul>
         {
-            allPosts.map((post) => (
-            <Posts url={`/writes/${post.slug}/`} title={post.data.title} description={post.data.description} pubDate={post.data.pubDate.toString().slice(0,10)}/>
+            posts.map((post) => (
+            <Posts url={`/writes/${post.slug}/`} title={post.data.title} description={post.data.description} pubDate={post.data.pubDate.toString().slice(0,10)} minutesRead={post.data.minutesRead}/>
             ))
         }
     </ul>
