--- a/src/pages/writes/[...slug].astro
+++ b/src/pages/writes/[...slug].astro
@@ -5,13 +5,22 @@ import Navigations from '../../components/Navigations.astro';
 
 export async function getStaticPaths() {
   const blogEntries = await getCollection('writes');
-  return blogEntries.map(entry => ({
-    params: { slug: entry.slug }, props: { entry },
+  return Promise.all(blogEntries.map(async entry => {
+    const { remarkPluginFrontmatter } = await entry.render();
+    return {
+      params: { slug: entry.slug },
+      props: { entry },
+      data: {
+        readingTime: remarkPluginFrontmatter.minutesRead as string
+      }
+    };
   }));
 }
 
+
 const { entry } = Astro.props;
 const { Content, remarkPluginFrontmatter } = await entry.render();
+console.log(remarkPluginFrontmatter.minutesRead)
 ---
 
 <PostLayout>
