--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -1,5 +1,6 @@
 ---
-const { url, title, description, pubDate } = Astro.props 
+const { url, title, description, pubDate, minutesRead } = Astro.props 
+
 ---
 <li class="my-2">
     <div class="flex justify-between">
@@ -7,6 +8,8 @@ const { url, title, description, pubDate } = Astro.props
         <p class="text-neutral-400">{pubDate}</p>
 
     </div>
-    <p class="text-neutral-400"> {description}</p>
-    
+    <div class="flex justify-between">
+        <p class="text-neutral-400">{description}</p>
+        <p class="text-neutral-400">{minutesRead}</p>
+    </div>
 </li>
