Update notes slug

--- a/src/pages/notes/[...slug].astro
+++ b/src/pages/notes/[...slug].astro
@@ -1,6 +1,7 @@
 ---
 import { getCollection } from 'astro:content';
 import PostLayout from '../../layouts/PostLayout.astro';
+import Navigations from '../../components/Navigations.astro';
 
 export async function getStaticPaths() {
   const blogEntries = await getCollection('notes');
@@ -10,8 +11,20 @@ export async function getStaticPaths() {
 }
 
 const { entry } = Astro.props;
-const { Content } = await entry.render();
+const { Content, remarkPluginFrontmatter } = await entry.render();
 ---
 <PostLayout>
-    <Content />
+  <h1 class="text-4xl font-bold mb-4">ᜐᜓᜎᜆᜒᜈ᜔</h1>
+    <Navigations url="../"/>
+    <div class="flex justify-between mt-2">
+      <h1 class="font-bold">{entry.data.title}</h1>
+      <p class="text-neutral-400">{entry.data.pubDate.toString().slice(0,10)}</p>
+    </div>
+    <div class="flex justify-between">
+      <p class="text-neutral-400">{entry.data.description}</p>
+      <p class="text-neutral-400">{remarkPluginFrontmatter.minutesRead}</p>
+    </div>
+    <div class="mt-2">
+      <Content />
+    </div>
 </PostLayout>
