--- a/src/pages/notes/[...slug].astro
+++ b/src/pages/notes/[...slug].astro
@@ -14,7 +14,7 @@ const { entry } = Astro.props;
 const { Content, remarkPluginFrontmatter } = await entry.render();
 ---
 <PostLayout>
-  <h1 class="text-4xl font-bold mb-4">ᜐᜓᜎᜆᜒᜈ᜔</h1>
+  <h1 class="text-4xl font-bold mb-4">ᜆᜎᜀᜈ᜔</h1>
     <Navigations url="../"/>
     <div class="flex justify-between mt-2">
       <h1 class="font-bold">{entry.data.title}</h1>
