--- a/src/pages/writes.astro
+++ b/src/pages/writes.astro
@@ -4,7 +4,7 @@ import Navigations from "../components/Navigations.astro";
 import Posts from "../components/Posts.astro";
 import PostLayout from "../layouts/PostLayout.astro";
 
-const pageTitle = "My Astro Learning Blog";
+const pageTitle = "jem | writes";
 const allPosts = await getCollection("writes");
 
 const posts = await Promise.all(
@@ -16,7 +16,7 @@ const posts = await Promise.all(
             ...post,
             data: {
                 ...post.data,
-                minutesRead: remarkPluginFrontmatter.minutesRead `as string`,
+                minutesRead: remarkPluginFrontmatter.minutesRead as string,
             },
       };
     }),
