--- a/src/pages/notes.astro
+++ b/src/pages/notes.astro
@@ -7,6 +7,20 @@ import PostLayout from "../layouts/PostLayout.astro";
 const pageTitle = "jem | notes"
 const allPosts = await getCollection("notes");
 
+const posts = await Promise.all(
+    allPosts
+    .sort(((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()))
+    .map(async (post) => {
+        const { remarkPluginFrontmatter  } = await post.render();
+        return {
+            ...post,
+            data: {
+                ...post.data,
+                minutesRead: remarkPluginFrontmatter.minutesRead as string,
+            },
+      };
+    }),
+)
 --- 
 <PostLayout pageTitle={pageTitle}>
     <h1 class="text-4xl font-bold mb-4">ᜆᜎᜀᜈ᜔</h1>
@@ -18,8 +32,8 @@ const allPosts = await getCollection("notes");
     <Navigations url={"/"}/>
     <ul>
         {
-            allPosts.map((post) => (
-            <Posts url={`/notes/${post.slug}/`} title={post.data.title} description={post.data.description} pubDate={post.data.pubDate.toString().slice(0,15)}/>
+            posts.map((post) => (
+            <Posts url={`/notes/${post.slug}/`} title={post.data.title} description={post.data.description} pubDate={post.data.pubDate.toString().slice(0,10)} minutesRead={post.data.minutesRead}/>
             ))
         }
     </ul>
