--- a/src/pages/notes/[...slug].astro
+++ b/src/pages/notes/[...slug].astro
@@ -13,7 +13,7 @@ export async function getStaticPaths() {
 const { entry } = Astro.props;
 const { Content, remarkPluginFrontmatter } = await entry.render();
 ---
-<PostLayout>
+<PostLayout pageTitle={entry.data.title}>
   <h1 class="text-4xl font-bold mb-4">ᜆᜎᜀᜈ᜔</h1>
     <Navigations url="../"/>
     <div class="flex justify-between mt-2">
