Update page titles in notes and writes

--- a/src/pages/notes.astro
+++ b/src/pages/notes.astro
@@ -4,7 +4,7 @@ import Navigations from "../components/Navigations.astro";
 import Posts from "../components/Posts.astro";
 import PostLayout from "../layouts/PostLayout.astro";
 
-const pageTitle = "jem | notes"
+const pageTitle = "jemcv | notes"
 const allPosts = await getCollection("notes");
 
 const posts = await Promise.all(
