--- a/src/pages/writes.astro
+++ b/src/pages/writes.astro
@@ -4,7 +4,7 @@ import Navigations from "../components/Navigations.astro";
 import Posts from "../components/Posts.astro";
 import PostLayout from "../layouts/PostLayout.astro";
 
-const pageTitle = "jem | writes";
+const pageTitle = "jemcv | writes";
 const allPosts = await getCollection("writes");
 
 const posts = await Promise.all(
