--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,4 @@
 ---
-import Projects from '../components/Projects.astro'
-import Writings from '../components/Writings.astro'
-import Socials from '../components/Socials.astro'
-
 const { pageTitle } = Astro.props;  
 ---
 <html lang="en">
@@ -14,10 +10,7 @@ const { pageTitle } = Astro.props;
     <meta name="description" content="Memento mori.">
     <title>{pageTitle}</title>
   </head> 
-  <body class="max-w-3xl mx-auto p-4 bg-neutral-950 color text-slate-100 font-sans">
+  <body class="max-w-3xl mx-auto p-4 bg-neutral-950 color text-slate-100">
     <slot />
-    <Projects />
-    <Writings />
-    <Socials />
   </body>
 </html>
