--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,11 +1,13 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import Navigations from '../components/Navigations.astro';
 const pageTitle = "4 zero 4";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
 	<h1 class="text-4xl font-bold mb-4">ᜊ᜔ᜎᜈ᜔ᜃ᜔</h1>
 	<div class="p-4">
-		<p>Ito ay 404 error.</p>
+		<p class="italic text-neutral-600">Ito ay 404 error.</p>
 	</div>
+	<Navigations url={"/"}/>
 </BaseLayout>
