Add RSS icon to Socials component

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,6 +1,6 @@
 ---
 import Social from "./Links.astro";
-import { InstagramIcon, GithubIcon} from 'astro-feather';
+import { InstagramIcon, GithubIcon, RssIcon} from 'astro-feather';
 ---
 
 <footer class="mt-8 flex ">
@@ -15,5 +15,11 @@ import { InstagramIcon, GithubIcon} from 'astro-feather';
         url="https://instagram.com"
         title="Instagram" 
         alt="instagram"
+    />
+    <Social
+        Icon={RssIcon} 
+        url="https://jemcv.me/rss.xml"
+        title="RSS" 
+        alt="rss"
     />
 </footer>
