Add my github account

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -6,7 +6,7 @@ import { InstagramIcon, GithubIcon, RssIcon, GlobeIcon} from 'astro-feather';
 <footer class="mt-8 flex ">
     <Social
         Icon={GithubIcon} 
-        url="https://github.com"
+        url="https://github.com/jemcv"
         title="Github" 
         alt="github"
     />
