Update Social component with new icon

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,6 +1,6 @@
 ---
 import Social from "./Links.astro";
-import { InstagramIcon, GithubIcon, RssIcon, GlobeIcon} from 'astro-feather';
+import { InstagramIcon, GithubIcon, RssIcon, ArchiveIcon} from 'astro-feather';
 ---
 
 <footer class="mt-8 flex ">
@@ -23,7 +23,7 @@ import { InstagramIcon, GithubIcon, RssIcon, GlobeIcon} from 'astro-feather';
         alt="rss"
     />
     <Social
-        Icon={GlobeIcon} 
+        Icon={ArchiveIcon} 
         url="https://jemcv.github.io/web"
         title="Archive" 
         alt="website"
