Add @tailwindcss/typography for markdown layout

--- a/src/pages/notes/[...slug].astro
+++ b/src/pages/notes/[...slug].astro
@@ -24,7 +24,7 @@ const { Content, remarkPluginFrontmatter } = await entry.render();
       <p class="text-neutral-400">{entry.data.description}</p>
       <p class="text-neutral-400">{remarkPluginFrontmatter.minutesRead}</p>
     </div>
-    <div class="mt-2">
+    <div class="mt-2 prose dark:prose-invert max-w-none">
       <Content />
     </div>
 </PostLayout>
