--- a/src/pages/writes/[...slug].astro
+++ b/src/pages/writes/[...slug].astro
@@ -13,7 +13,6 @@ export async function getStaticPaths() {
 const { entry } = Astro.props;
 const { Content, remarkPluginFrontmatter } = await entry.render();
 ---
-
 <PostLayout pageTitle={entry.data.title}>
   <h1 class="text-4xl font-bold mb-4">ᜐᜓᜎᜆᜒᜈ᜔</h1>
     <Navigations url="../"/>
@@ -25,7 +24,7 @@ const { Content, remarkPluginFrontmatter } = await entry.render();
       <p class="text-neutral-400">{entry.data.description}</p>
       <p class="text-neutral-400">{remarkPluginFrontmatter.minutesRead}</p>
     </div>
-    <div class="mt-2">
+    <div class="mt-2 prose dark:prose-invert max-w-none">
       <Content />
     </div>
 </PostLayout>
