Update Socials component style

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -3,7 +3,7 @@ import Social from "./Links.astro";
 import { InstagramIcon, GithubIcon, RssIcon, ArchiveIcon} from 'astro-feather';
 ---
 
-<footer class="mt-8 flex ">
+<footer class="mt-8 flex flex-nowrap">
     <Social
         Icon={GithubIcon} 
         url="https://github.com/jemcv"
