--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const information = {
 	<h1 class="text-4xl font-bold mb-4">ᜇᜒᜌᜒᜋ᜔</h1>
 	<div class="p-4">
 		<p class="mb-4">Hey there! I'm <span class="font-bold">{information.name}</span>.</p>
-		<p class="mb-4">I am passionate about <b>{information.hobbies[0]}</b>, <b>{information.hobbies[1]}</b>, and <b>{information.hobbies[2]}</b>. I’m currently on a mission to become a Software Developer 🧑‍💻, turning my passion for technology into a dream career. I’m in the process of completing my Bachelor of Science in Information Technology degree.</p>
+		<p class="mb-4">Practicing touch typing ⌨ with a <b>75%</b> keyboard + <b>Akko V3 Cream Black Pro </b> switches.</p>
 		<p>Currently adopting a design approach focused on simplicity and clarity. My guiding philosophy is based on the belief that '<span class="font-bold italic">less is more</span>'.</p>
 	</div>
 	<Projects />
