Add under construction

--- a/src/pages/notes.astro
+++ b/src/pages/notes.astro
@@ -27,7 +27,7 @@ const posts = await Promise.all(
     <h1 class="text-4xl font-bold mb-4">ᜆᜎᜀᜈ᜔</h1>
    
     <div class="p-4">
-        <p class="italic text-neutral-600">Below is a collection of notes I've made over the years. If you happen to be here, I hope you find them useful. :)</p>
+        <p class="italic text-neutral-600">This section is under construction. 🚧</p>
         {/*<p>Notes Count: {allPosts.length}</p> */}
     </div>
     <Navigations url={"/"}/>
