--- a/src/pages/writes.astro
+++ b/src/pages/writes.astro
@@ -27,7 +27,7 @@ const posts = await Promise.all(
     <h1 class="text-4xl font-bold mb-4">ᜐᜓᜎᜆᜒᜈ᜔</h1>
    
     <div class="p-4">
-        <p class="italic text-neutral-600">Here are my writings I never thought I would write. :)</p> 
+        <p class="italic text-neutral-600">This section is under construction. 🚧</p> 
         {/*<p>Writes count: {allPosts.length}</p>*/}
     </div>
     
