--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,7 +6,7 @@ const pageTitle = "4 zero 4";
 <BaseLayout pageTitle={pageTitle}>
 	<h1 class="text-4xl font-bold mb-4">ᜊ᜔ᜎᜈ᜔ᜃ᜔</h1>
 	<div class="p-4">
-		<p class="italic text-neutral-600">Ito ay 404 error.</p>
+		<p class="italic text-neutral-600">null</p>
 	</div>
 	<Navigations url={"/"}/>
 </BaseLayout>
