--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from "astro:transitions";
 const { pageTitle } = Astro.props;  
 ---
 <html lang="en">
@@ -9,6 +10,7 @@ const { pageTitle } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content="Memento mori.">
     <title>{pageTitle}</title>
+    <ViewTransitions />
   </head> 
   <body class="max-w-3xl mx-auto p-4 bg-neutral-950 text-neutral-200">
     <slot />
