--- a/src/pages/writes.astro
+++ b/src/pages/writes.astro
@@ -35,7 +35,7 @@ const posts = await Promise.all(
     <ul>
         {
             posts.map((post) => (
-            <Posts url={`/writes/${post.slug}/`} title={post.data.title} description={post.data.description} pubDate={post.data.pubDate.toString().slice(0,10)} minutesRead={post.data.minutesRead}/>
+            <Posts transition={post.data.title} url={`/writes/${post.slug}/`} title={post.data.title} description={post.data.description} pubDate={post.data.pubDate.toString().slice(0,10)} minutesRead={post.data.minutesRead}/>
             ))
         }
     </ul>
