--- a/src/pages/writes/[...slug].astro
+++ b/src/pages/writes/[...slug].astro
@@ -19,7 +19,7 @@ const { Content, remarkPluginFrontmatter } = await entry.render();
   <h1 class="text-4xl font-bold mb-4">ᜐᜓᜎᜆᜒᜈ᜔</h1>
     <Navigations url="../"/>
     <div class="flex justify-between mt-2">
-      <h1 class="font-bold">{entry.data.title}</h1>
+      <h1 transition:name={entry.data.title} class="font-bold">{entry.data.title}</h1>
       <p class="text-neutral-400">{entry.data.pubDate.toString().slice(0,10)}</p>
     </div>
     <div class="flex justify-between mb-5">
