--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Navigations from '../components/Navigations.astro';
-const pageTitle = "4zero4";
+const pageTitle = "404";
 ---
 <BaseLayout pageTitle={pageTitle}>
 	<h1 class="text-4xl font-bold mb-4">ᜊ᜔ᜎᜈ᜔ᜃ᜔</h1>
