--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -7,6 +7,6 @@ const { Icon, title, description, url, emoji } = Astro.props;
     </div>
     <div class="ml-8">
         <p class="font-semibold"><a class="border border-transparent hover:border-neutral-100 underline" href={url}>{title}</a></p>
-        <p>{description} {emoji}</p>
+        <p class="text-neutral-400">{description} {emoji}</p>
     </div>
 </div>
