Update navigation and post links styles

--- a/src/components/Navigations.astro
+++ b/src/components/Navigations.astro
@@ -4,7 +4,7 @@ import { ArrowLeftIcon } from 'astro-feather';
 const { url } = Astro.props
 ---
 <nav class="flex justify-end">
-    <a href={url} class="flex items-center underline border border-transparent hover:border-slate-100">
+    <a href={url} class="flex items-center border border-transparent hover:border-slate-100 font-semibold underline">
         <ArrowLeftIcon size={24} />
         <span class="ml-1">Back</span>
     </a>
