--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -3,7 +3,7 @@ const { url, title, description, pubDate, minutesRead, transition } = Astro.prop
 ---
 <li class="my-2">
     <div class="flex justify-between">
-        <a class="underline border border-transparent hover:border-slate-100" transition:name={transition} href={url}>{title} </a>
+        <a class="border border-transparent hover:border-slate-100 font-semibold underline" transition:name={transition} href={url}>{title} </a>
         <p class="text-neutral-400">{pubDate}</p>
     </div>
     <div class="flex justify-between">
