--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,4 +1,6 @@
 ---
+import '@fontsource/noto-sans-tagalog';
+import '@fontsource-variable/noto-emoji';
 import { ViewTransitions } from "astro:transitions";
 const { pageTitle } = Astro.props;  
 ---
