--- a/src/components/Writings.astro
+++ b/src/components/Writings.astro
@@ -7,13 +7,13 @@ import { BookIcon, Edit2Icon } from 'astro-feather';
     <Writing
         Icon={BookIcon} 
         url="writes"
-        title="Some of my writings" 
+        title="writings" 
         description="caution: inside are my thoughts"
     />
     <Writing
         Icon={Edit2Icon} 
         url="notes"
-        title="Some of my notes" 
+        title="notes" 
         description="caution: pasensya dahil magulo"
     />
 </section>
