--- a/src/components/Writings.astro
+++ b/src/components/Writings.astro
@@ -14,6 +14,6 @@ import { BookIcon, Edit2Icon } from 'astro-feather';
         Icon={Edit2Icon} 
         url="notes"
         title="notes" 
-        description="caution: pasensya dahil magulo"
+        description="caution: still under construction"
     />
 </section>
