--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,6 +1,6 @@
 ---
 import Project from './Cards.astro';
-import { ShieldIcon, TerminalIcon, UserIcon } from 'astro-feather';
+import { ShieldIcon, TerminalIcon, CodeIcon } from 'astro-feather';
 ---
 <section class="mt-4">
     <h1 class="font-bold mb-2">Projects</h1>
@@ -14,10 +14,10 @@ import { ShieldIcon, TerminalIcon, UserIcon } from 'astro-feather';
         Icon={TerminalIcon} 
         url="https://github.com/jemcv/lolst"
         title="lolst" 
-        description="league of legends rank stats in the terminal using bash"
+        description="bash script that displays league of legends stats in the terminal"
     />
     <Project
-        Icon={UserIcon} 
+        Icon={CodeIcon} 
         url="https://github.com/jemcv/astrojem"
         title="astrojem" 
         description="the source code of my personal site built with astro"
