--- a/src/components/Writings.astro
+++ b/src/components/Writings.astro
@@ -7,7 +7,7 @@ import { BookIcon, Edit2Icon } from 'astro-feather';
     <Writing
         Icon={BookIcon} 
         url="writes"
-        title="writings" 
+        title="writes" 
         description="caution: inside are my thoughts"
     />
     <Writing
