--- a/src/components/Writings.astro
+++ b/src/components/Writings.astro
@@ -8,12 +8,12 @@ import { BookIcon, Edit2Icon } from 'astro-feather';
         Icon={BookIcon} 
         url="writes"
         title="writes" 
-        description="caution: inside are my thoughts"
+        description="caution: inside are my thoughts 💭"
     />
     <Writing
         Icon={Edit2Icon} 
         url="notes"
         title="notes" 
-        description="caution: still under construction"
+        description="caution: still under construction 🔨"
     />
 </section>
