--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,10 +21,10 @@ const information = {
 <BaseLayout pageTitle={pageTitle}>
 	<h1 class="text-4xl font-bold mb-4">ᜇᜒᜌᜒᜋ᜔</h1>
 	<div class="p-4">
-		<p class="mb-4">Hey there! I'm <span class="font-bold">{information.name}</span>.</p>
-		<p class="mb-4">Practicing touch typing ⌨ with a <b>75%</b> keyboard + <b>Akko V3 Cream Black Pro </b> switches.</p>
+		<p class="mb-4">Hey! 👋  I'm <span class="font-bold">{information.name}</span>.</p>
 		<p>Currently adopting a design approach focused on simplicity and clarity. My guiding philosophy is based on the belief that '<span class="font-bold italic">less is more</span>'.</p>
-	</div>
+    <p class="mt-4">Check out my previous <a href="https://jemcv.github.io/web" target="_blank"><span class="font-bold underline">Linux setup</span>.</a> 🐧</p>  
+  </div>
     <Projects />
     <Writings />
     <Socials />
