--- a/src/pages/writes/[...slug].astro
+++ b/src/pages/writes/[...slug].astro
@@ -3,6 +3,8 @@ import { getCollection } from 'astro:content';
 import PostLayout from '../../layouts/PostLayout.astro';
 import Navigations from '../../components/Navigations.astro';
 
+export const prerender = true;
+
 export async function getStaticPaths() {
   const blogEntries = await getCollection('writes');
   return blogEntries
