--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -9,17 +9,20 @@ import { ShieldIcon, TerminalIcon, CodeIcon } from 'astro-feather';
         url="https://github.com/carbonetes/brainiac"
         title="brainiac" 
         description="an open-source tool i contributed to during my internship"
+        targetBlank={true}
     />
     <Project 
         Icon={TerminalIcon} 
         url="https://github.com/jemcv/lolst"
         title="lolst" 
         description="bash script that displays league of legends stats in the terminal"
+        targetBlank={true}
     />
     <Project
         Icon={CodeIcon} 
         url="https://github.com/jemcv/astrojem"
         title="astrojem" 
         description="the source code of my personal site built with astro"
+        targetBlank={true}
     />
 </section>
