Correct capitalization of titles

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -6,13 +6,13 @@ import {  GithubIcon, RssIcon, ArchiveIcon, MailIcon, LinkedinIcon } from 'astro
     <Social
         Icon={GithubIcon} 
         url="https://github.com/jemcv"
-        title="Github" 
+        title="GitHub" 
         alt="github"
     />
     <Social
         Icon={LinkedinIcon}
         url="https://www.linkedin.com/in/jemuel-veroja/"
-        title="Linkedin"
+        title="LinkedIn"
         alt="linkedin"
     />
    <Social
@@ -23,7 +23,7 @@ import {  GithubIcon, RssIcon, ArchiveIcon, MailIcon, LinkedinIcon } from 'astro
     />
     <Social
         Icon={RssIcon} 
-        url="https://jemcv.me/rss.xml"
+        url="https://jemcv.vercel.app/rss.xml"
         title="RSS" 
         alt="rss"
     />
